@@ -1,72 +1,60 @@
 /*
- * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
+ * Copyright (c) Huawei Technologies Co., Ltd. 2026. All rights reserved.
  */
 
 package com.openjiuwen.core.foundation.llm.output_parsers;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.openjiuwen.core.common.logging.Loggers;
+import com.openjiuwen.core.common.logging.LoggerProtocol;
+import com.openjiuwen.core.common.security.UserConfig;
 import com.openjiuwen.core.foundation.llm.schema.AssistantMessage;
 import com.openjiuwen.core.foundation.llm.schema.AssistantMessageChunk;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.concurrent.CompletableFuture;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /**
- * JSON output parser that extracts JSON from LLM text output.
- * <p>
- * Supports extracting JSON from {@code ```json ... ```} code blocks
- * or parsing plain JSON text.
- * <p>
- * Mirrors Python's {@code JsonOutputParser}.
- * 
- * @since 0.1.7
+ * Mirrors Python's {@code JsonOutputParser} in
+ * {@code openjiuwen/core/foundation/llm/output_parsers/json_output_parser.py}.
  */
 public class JsonOutputParser extends BaseOutputParser {
-    private static final Logger LOG = LoggerFactory.getLogger(JsonOutputParser.class);
 
-    /**
-     * ObjectMapper.
-     * 
-     * @since 0.1.7
-     */
-    private static final ObjectMapper MAPPER = new ObjectMapper();
-
-    /**
-     * Pattern.compile.
-     * 
-     * @since 0.1.7
-     */
+    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
+    private static final LoggerProtocol LOGGER = Loggers.LLM;
     private static final Pattern JSON_CODE_BLOCK = Pattern.compile("```json\\n(.*?)```", Pattern.DOTALL);
 
-    /**
-     * parse.
-     * 
-     * @param inputs inputs
-     * @return the result
-     * @since 0.1.7
-     */
     @Override
-    public Object parse(Object inputs) {
-        String text;
-        String modelName = null;
+    public CompletableFuture<Object> parse(Object inputs) {
+        return CompletableFuture.completedFuture(parseValue(inputs));
+    }
 
-        if (inputs instanceof AssistantMessage am) {
-            text = am.getContentAsString();
-            if (am.getUsageMetadata() != null) {
-                modelName = am.getUsageMetadata().getModelName();
+    @Override
+    public Iterator<Object> streamParse(Iterator<?> streamingInputs) {
+        return new JsonStreamIterator(streamingInputs);
+    }
+
+    private Object parseValue(Object llmOutput) {
+        String modelName = null;
+        String text;
+        if (llmOutput instanceof AssistantMessage message) {
+            text = message.getContentAsString();
+            if (message.getUsageMetadata() != null) {
+                modelName = message.getUsageMetadata().getModelName();
             }
-        } else if (inputs instanceof String s) {
-            text = s;
+        } else if (llmOutput instanceof String stringValue) {
+            text = stringValue;
         } else {
-            LOG.warn("Unsupported input type for parse: {}", inputs != null ? inputs.getClass() : "null");
+            logUnsupportedInput(modelName, llmOutput);
             return null;
         }
 
@@ -74,64 +62,89 @@ public class JsonOutputParser extends BaseOutputParser {
             return null;
         }
 
-        Matcher matcher = JSON_CODE_BLOCK.matcher(text);
-        String jsonStr;
-        if (matcher.find()) {
-            jsonStr = matcher.group(1).strip();
-        } else {
-            jsonStr = text.strip();
-        }
-
+        String jsonStr = extractJsonString(text);
         try {
-            return MAPPER.readValue(jsonStr, Object.class);
-        } catch (JsonProcessingException e) {
-            LOG.error("Failed to decode JSON from LLM output. model={}", modelName, e);
+            return OBJECT_MAPPER.readValue(jsonStr, Object.class);
+        } catch (JsonProcessingException exception) {
+            logJsonDecodeFailure("Failed to decode JSON from LLM output", modelName, exception, jsonStr);
+            return null;
+        } catch (Exception exception) {
+            logUnexpectedParseFailure("An unexpected error occurred during JSON parsing", modelName, exception, jsonStr);
             return null;
         }
     }
 
-    /**
-     * streamParse.
-     * 
-     * @param streamingInputs streamingInputs
-     * @return the result
-     * @since 0.1.7
-     */
-    @Override
-    public Iterator<Object> streamParse(Iterator<?> streamingInputs) {
-        return new JsonStreamIterator(streamingInputs);
+    private static String extractJsonString(String text) {
+        Matcher matcher = JSON_CODE_BLOCK.matcher(text);
+        if (matcher.find()) {
+            return matcher.group(1).trim();
+        }
+        return text.trim();
     }
 
-    /**
-     * Iterator that buffers streaming chunks and yields parsed JSON as it becomes available.
-     */
-    private static class JsonStreamIterator implements Iterator<Object> {
+    private static void logUnsupportedInput(String modelName, Object llmOutput) {
+        if (UserConfig.isSensitive()) {
+            LOGGER.warning("Unsupported llm_output type for parse. model_name={}", modelName);
+        } else {
+            LOGGER.warning(
+                    "Unsupported llm_output type for parse. model_name={}, llm_output_type={}",
+                    modelName,
+                    llmOutput == null ? "null" : llmOutput.getClass().toString()
+            );
+        }
+    }
+
+    private static void logUnsupportedChunk(String modelName, Object chunk) {
+        if (UserConfig.isSensitive()) {
+            LOGGER.warning("Unsupported chunk type for stream_parse. model_name={}", modelName);
+        } else {
+            LOGGER.warning(
+                    "Unsupported chunk type for stream_parse. model_name={}, chunk_type={}",
+                    modelName,
+                    chunk == null ? "null" : chunk.getClass().toString()
+            );
+        }
+    }
+
+    private static void logJsonDecodeFailure(String message, String modelName, Exception exception, String content) {
+        if (UserConfig.isSensitive()) {
+            LOGGER.error("{} model_name={}", message, modelName);
+        } else {
+            LOGGER.error(
+                    "{} model_name={}, exception={}, content={}",
+                    message,
+                    modelName,
+                    exception.toString(),
+                    content
+            );
+        }
+    }
+
+    private static void logUnexpectedParseFailure(String message, String modelName, Exception exception, String content) {
+        if (UserConfig.isSensitive()) {
+            LOGGER.error("{} model_name={}", message, modelName);
+        } else {
+            LOGGER.error(
+                    "{} model_name={}, exception={}, content={}",
+                    message,
+                    modelName,
+                    exception.toString(),
+                    content
+            );
+        }
+    }
+
+    private static final class JsonStreamIterator implements Iterator<Object> {
+
         private final Iterator<?> source;
-
-        /**
-         * StringBuilder.
-         * 
-         * @since 0.1.7
-         */
         private final StringBuilder buffer = new StringBuilder();
+        private final Deque<Object> pending = new ArrayDeque<>();
+        private String modelName;
 
-        /**
-         * ArrayList<>.
-         * 
-         * @since 0.1.7
-         */
-        private final List<Object> pending = new ArrayList<>();
-
-        JsonStreamIterator(Iterator<?> source) {
+        private JsonStreamIterator(Iterator<?> source) {
             this.source = source;
         }
 
-        /**
-         * hasNext.
-         * 
-         * @return the result
-         * @since 0.1.7
-         */
         @Override
         public boolean hasNext() {
             if (!pending.isEmpty()) {
@@ -139,95 +152,116 @@ public class JsonOutputParser extends BaseOutputParser {
             }
             while (source.hasNext()) {
                 Object chunk = source.next();
-                if (chunk instanceof AssistantMessageChunk amc && amc.getContent() != null) {
-                    buffer.append(amc.getContentAsString());
-                } else if (chunk instanceof String s) {
-                    buffer.append(s);
+                if (chunk instanceof AssistantMessageChunk messageChunk) {
+                    if (messageChunk.getContent() != null) {
+                        buffer.append(messageChunk.getContentAsString());
+                    }
+                    if (messageChunk.getUsageMetadata() != null) {
+                        modelName = messageChunk.getUsageMetadata().getModelName();
+                    }
+                } else if (chunk instanceof String stringChunk) {
+                    buffer.append(stringChunk);
                 } else {
-                    LOG.warn("Unsupported chunk type for stream_parse: {}", chunk != null ? chunk.getClass() : "null");
+                    logUnsupportedChunk(modelName, chunk);
                     continue;
                 }
-                tryParse();
+                tryParseBufferedJson();
                 if (!pending.isEmpty()) {
                     return true;
                 }
             }
-            // Flush remaining buffer
-            if (!buffer.isEmpty()) {
-                tryParseFinal();
-            }
+            flushRemainingBuffer();
             return !pending.isEmpty();
         }
 
-        /**
-         * next.
-         * 
-         * @return the result
-         * @since 0.1.7
-         */
         @Override
         public Object next() {
             if (pending.isEmpty() && !hasNext()) {
                 throw new NoSuchElementException();
             }
-            return pending.remove(0);
+            return pending.removeFirst();
         }
 
-        @SuppressWarnings("unchecked")
-        /**
-         * tryParse.
-         * 
-         * @since 0.1.7
-         */
-        private void tryParse() {
-            String text = buffer.toString();
-            Matcher matcher = JSON_CODE_BLOCK.matcher(text);
+        private void tryParseBufferedJson() {
+            String current = buffer.toString();
+            Matcher matcher = JSON_CODE_BLOCK.matcher(current);
             if (matcher.find()) {
-                String jsonStr = matcher.group(1).strip();
+                String jsonStr = matcher.group(1).trim();
                 try {
-                    Object parsed = MAPPER.readValue(jsonStr, Object.class);
-                    pending.add(parsed);
+                    pending.add(OBJECT_MAPPER.readValue(jsonStr, Object.class));
                     buffer.delete(0, matcher.end());
-                } catch (JsonProcessingException e) {
-                    LOG.error("Streaming JSON parse error", e);
-                }
-            } else if (text.strip().startsWith("{") && text.strip().endsWith("}")) {
-                try {
-                    Object parsed = MAPPER.readValue(text.strip(), Object.class);
-                    pending.add(parsed);
+                } catch (JsonProcessingException exception) {
+                    logUnexpectedParseFailure(
+                            "An unexpected error occurred during streaming JSON parsing",
+                            modelName,
+                            exception,
+                            current
+                    );
+                } catch (Exception exception) {
+                    logUnexpectedParseFailure(
+                            "An unexpected error occurred during streaming JSON parsing",
+                            modelName,
+                            exception,
+                            current
+                    );
                     buffer.setLength(0);
-                } catch (JsonProcessingException e) {
-                    // Not yet complete, keep buffering
                 }
-            } else {
-                // no-op
-            }
-        }
-
-        /**
-         * tryParseFinal.
-         * 
-         * @since 0.1.7
-         */
-        private void tryParseFinal() {
-            String text = buffer.toString().strip();
-            if (text.isEmpty()) {
                 return;
             }
-            Matcher matcher = JSON_CODE_BLOCK.matcher(text);
-            String jsonStr;
-            if (matcher.find()) {
-                jsonStr = matcher.group(1).strip();
-            } else {
-                jsonStr = text;
+
+            String trimmed = current.trim();
+            if (trimmed.startsWith("{") && trimmed.endsWith("}")) {
+                try {
+                    pending.add(OBJECT_MAPPER.readValue(trimmed, Object.class));
+                    buffer.setLength(0);
+                } catch (JsonProcessingException exception) {
+                    logUnexpectedParseFailure(
+                            "An unexpected error occurred during streaming JSON parsing",
+                            modelName,
+                            exception,
+                            current
+                    );
+                } catch (Exception exception) {
+                    logUnexpectedParseFailure(
+                            "An unexpected error occurred during streaming JSON parsing (direct)",
+                            modelName,
+                            exception,
+                            current
+                    );
+                    buffer.setLength(0);
+                }
             }
+        }
+
+        private void flushRemainingBuffer() {
+            String trimmed = buffer.toString().trim();
+            if (trimmed.isEmpty()) {
+                return;
+            }
+            String jsonStr = extractJsonString(trimmed);
             try {
-                Object parsed = MAPPER.readValue(jsonStr, Object.class);
-                pending.add(parsed);
-            } catch (JsonProcessingException e) {
-                LOG.warn("Remaining buffer could not be parsed as JSON", e);
+                pending.add(OBJECT_MAPPER.readValue(jsonStr, Object.class));
+            } catch (JsonProcessingException exception) {
+                if (UserConfig.isSensitive()) {
+                    LOGGER.warning("Remaining buffer could not be fully parsed as JSON model_name={}", modelName);
+                } else {
+                    LOGGER.warning(
+                            "Remaining buffer could not be fully parsed as JSON model_name={}, exception={}, content={}",
+                            modelName,
+                            exception.toString(),
+                            jsonStr
+                    );
+                }
+            } catch (Exception exception) {
+                logUnexpectedParseFailure(
+                        "An unexpected error occurred during final streaming JSON parsing",
+                        modelName,
+                        exception,
+                        jsonStr
+                );
+            } finally {
+                buffer.setLength(0);
             }
-            buffer.setLength(0);
         }
     }
 }
