@@ -4,166 +4,105 @@
 
 package com.openjiuwen.extensions.context_evolver.core.file_connector;
 
-import com.fasterxml.jackson.core.json.JsonWriteFeature;
-import com.fasterxml.jackson.core.util.DefaultIndenter;
-import com.fasterxml.jackson.core.util.DefaultPrettyPrinter;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.ObjectWriter;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
+import com.openjiuwen.core.common.logging.LoggerProtocol;
+import com.openjiuwen.core.common.logging.Loggers;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 /**
- * Mirrors Python's
- * {@code openjiuwen.extensions.context_evolver.core.file_connector.json_file_connector.JSONFileConnector}.
- * Generic connector for saving and loading JSON data to/from files.
- * 
- * @since 0.1.7
+ * Mirrors Python's {@code JSONFileConnector} in
+ * {@code openjiuwen/extensions/context_evolver/core/file_connector/json_file_connector.py}.
  */
 public class JSONFileConnector {
-    private static final Logger log = LoggerFactory.getLogger(JSONFileConnector.class);
 
-    private final ObjectMapper objectMapper;
-    private final int indent;
-    private final boolean ensureAscii;
+    private static final LoggerProtocol LOGGER = Loggers.CONTEXT_ENGINE;
+    private static final TypeReference<LinkedHashMap<String, Object>> MAP_TYPE = new TypeReference<>() { };
 
-    /**
-     * JSONFileConnector.
-     * 
-     * @since 0.1.7
-     */
+    private final ObjectMapper mapper;
+
     public JSONFileConnector() {
         this(2, false);
     }
 
-    /**
-     * JSONFileConnector.
-     * 
-     * @param indent indent
-     * @param ensureAscii ensureAscii
-     * @since 0.1.7
-     */
     public JSONFileConnector(int indent, boolean ensureAscii) {
-        this.indent = indent;
-        this.ensureAscii = ensureAscii;
-        this.objectMapper = new ObjectMapper();
+        this.mapper = new ObjectMapper();
+        if (indent > 0) {
+            this.mapper.writerWithDefaultPrettyPrinter();
+        }
         if (ensureAscii) {
-            this.objectMapper.getFactory().configure(JsonWriteFeature.ESCAPE_NON_ASCII.mappedFeature(), true);
+            this.mapper.getFactory().configure(com.fasterxml.jackson.core.JsonGenerator.Feature.ESCAPE_NON_ASCII, true);
         }
     }
 
-    /**
-     * Save dictionary data to a JSON file.
-     * 
-     * @param filePath path to save the JSON file
-     * @param data dictionary data to save
-     * @since 0.1.7
-     */
     public void saveToFile(String filePath, Map<String, Object> data) {
         try {
-            Path path = Paths.get(filePath);
-            Path parent = path.getParent();
-            if (parent != null) {
-                Files.createDirectories(parent);
+            Path path = Path.of(filePath);
+            if (path.getParent() != null) {
+                Files.createDirectories(path.getParent());
             }
-
-            String json = buildWriter().writeValueAsString(data);
-            Files.writeString(path, json, StandardCharsets.UTF_8);
-
-            log.info("Saved data to {} ({} top-level keys)", filePath, data.size());
-        } catch (IOException e) {
-            log.error("Failed to save data to {}: {}", filePath, e.getMessage());
-            throw new RuntimeException("Failed to save data to " + filePath, e);
+            mapper.writerWithDefaultPrettyPrinter().writeValue(path.toFile(), data);
+            LOGGER.info("Saved data to %s (%s top-level keys)", filePath, data.size());
+        } catch (IOException exception) {
+            LOGGER.error("Failed to save data to %s: %s", filePath, exception.getMessage());
+            throw new RuntimeException(exception);
         }
     }
 
-    /**
-     * loadFromFile.
-     * 
-     * @param filePath filePath
-     * @return the result
-     * @since 0.1.7
-     */
-    @SuppressWarnings("unchecked")
     public Map<String, Object> loadFromFile(String filePath) {
         try {
-            String json = Files.readString(Paths.get(filePath), StandardCharsets.UTF_8);
-            Map<String, Object> data = objectMapper.readValue(json, Map.class);
-
-            log.info("Loaded data from {} ({} top-level keys)", filePath, data.size());
+            Map<String, Object> data = mapper.readValue(Path.of(filePath).toFile(), MAP_TYPE);
+            LOGGER.info("Loaded data from %s (%s top-level keys)", filePath, data.size());
             return data;
-        } catch (IOException e) {
-            log.error("Failed to load data from {}: {}", filePath, e.getMessage());
-            throw new RuntimeException("Failed to load data from " + filePath, e);
+        } catch (IOException exception) {
+            LOGGER.error("Failed to load data from %s: %s", filePath, exception.getMessage());
+            throw new RuntimeException(exception);
         }
     }
 
-    /**
-     * Check if a file exists.
-     * 
-     * @param filePath filePath
-     * @return the result
-     * @since 0.1.7
-     */
-    public static boolean isExists(String filePath) {
-        return Files.exists(Paths.get(filePath));
+    public boolean exists(String filePath) {
+        return Files.exists(Path.of(filePath));
     }
 
-    /**
-     * exists.
-     * 
-     * @param filePath filePath
-     * @return the result
-     * @since 0.1.7
-     */
-    public static boolean exists(String filePath) {
-        return isExists(filePath);
-    }
-
-    /**
-     * Delete a file if it exists.
-     * 
-     * @param filePath filePath
-     * @return true if file was deleted, false if it didn't exist
-     * @since 0.1.7
-     */
-    public static boolean delete(String filePath) {
+    public boolean delete(String filePath) {
         try {
-            Path path = Paths.get(filePath);
-            if (Files.deleteIfExists(path)) {
-                log.info("Deleted file: {}", filePath);
+            Path path = Path.of(filePath);
+            if (Files.exists(path)) {
+                Files.delete(path);
+                LOGGER.info("Deleted file: %s", filePath);
                 return true;
             }
             return false;
-        } catch (IOException e) {
-            log.error("Failed to delete {}: {}", filePath, e.getMessage());
-            throw new RuntimeException("Failed to delete " + filePath, e);
+        } catch (IOException exception) {
+            LOGGER.error("Failed to delete %s: %s", filePath, exception.getMessage());
+            throw new RuntimeException(exception);
         }
     }
 
-    /**
-     * buildWriter.
-     * 
-     * @return the result
-     * @since 0.1.7
-     */
-    private ObjectWriter buildWriter() {
-        if (indent <= 0) {
-            return objectMapper.writer();
+    @SuppressWarnings("unchecked")
+    public static Map<String, Object> safeModelDump(Object obj) {
+        for (String methodName : new String[]{"modelDump", "toDict", "dict"}) {
+            try {
+                Method method = obj.getClass().getMethod(methodName);
+                Object result = method.invoke(obj);
+                if (result instanceof Map<?, ?> map) {
+                    return new LinkedHashMap<>((Map<String, Object>) map);
+                }
+            } catch (NoSuchMethodException ignored) {
+                // Try the next Python-compatible serialization method.
+            } catch (IllegalAccessException | InvocationTargetException exception) {
+                LOGGER.debug("%s() failed, trying fallback methods: %s", methodName, exception.getMessage());
+            }
         }
-
-        String indentValue = " ".repeat(indent);
-        DefaultIndenter indenter = new DefaultIndenter(indentValue, System.lineSeparator());
-        DefaultPrettyPrinter prettyPrinter = new DefaultPrettyPrinter();
-        prettyPrinter.indentObjectsWith(indenter);
-        prettyPrinter.indentArraysWith(indenter);
-        return objectMapper.writer(prettyPrinter);
+        throw new IllegalArgumentException(
+                "Object of type " + obj.getClass().getSimpleName()
+                        + " has no serialization method (modelDump, toDict, or dict)"
+        );
     }
 }
