@@ -1,85 +1,218 @@
 /*
- * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
+ * Copyright (c) Huawei Technologies Co., Ltd. 2026. All rights reserved.
  */
 
 package com.openjiuwen.core.operator;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import com.openjiuwen.core.session.Session;
-
-import org.junit.jupiter.api.DisplayName;
+import com.openjiuwen.agent_evolving.ApplyResult;
+import com.openjiuwen.agent_evolving.Protocols;
+import com.openjiuwen.agent_evolving.UpdateValue;
 import org.junit.jupiter.api.Test;
 
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 /**
- * Port of Python operator base tests.
+ * Mirrors Python's {@code TestTunableSpec} and {@code TestOperator} in
+ * {@code tests/unit_tests/core/operator/test_base.py}.
  */
 class OperatorBaseTest {
-    @Test
-    @DisplayName("TunableSpec initializes with all params")
-    void testTunableSpecAllParams() {
-        TunableSpec spec =
-            new TunableSpec("temperature", "continuous", "model.temperature", Map.of("min", 0.0, "max", 1.0));
 
-        assertEquals("temperature", spec.name());
-        assertEquals("continuous", spec.kind());
-        assertEquals("model.temperature", spec.path());
-        assertEquals(Map.of("min", 0.0, "max", 1.0), spec.constraint());
+    @Test
+    void tunableSpecStoresAllParameters() {
+        TunableSpec spec = new TunableSpec(
+                "temperature",
+                "continuous",
+                "model.temperature",
+                Map.of("min", 0.0, "max", 1.0)
+        );
+
+        assertThat(spec.name()).isEqualTo("temperature");
+        assertThat(spec.kind()).isEqualTo("continuous");
+        assertThat(spec.path()).isEqualTo("model.temperature");
+        assertThat(spec.constraint()).isEqualTo(Map.of("min", 0.0, "max", 1.0));
     }
 
     @Test
-    @DisplayName("TunableSpec initializes with minimal params")
-    void testTunableSpecMinimalParams() {
+    void tunableSpecSupportsMinimalParameters() {
         TunableSpec spec = new TunableSpec("prompt", "prompt", "prompt");
 
-        assertEquals("prompt", spec.name());
-        assertEquals("prompt", spec.kind());
-        assertEquals("prompt", spec.path());
-        assertNull(spec.constraint());
+        assertThat(spec.name()).isEqualTo("prompt");
+        assertThat(spec.kind()).isEqualTo("prompt");
+        assertThat(spec.path()).isEqualTo("prompt");
+        assertThat(spec.constraint()).isNull();
     }
 
     @Test
-    @DisplayName("Operator remains abstract and stream defaults to unsupported")
-    void testOperatorAbstractContract() throws Exception {
-        assertTrue(Modifier.isAbstract(Operator.class.getModifiers()));
-
-        Method getOperatorId = Operator.class.getDeclaredMethod("getOperatorId");
-        Method getTunables = Operator.class.getDeclaredMethod("getTunables");
-        Method setParameter = Operator.class.getDeclaredMethod("setParameter", String.class, Object.class);
-        Method getState = Operator.class.getDeclaredMethod("getState");
-        Method loadState = Operator.class.getDeclaredMethod("loadState", Map.class);
-        Method invoke = Operator.class.getDeclaredMethod("invoke", Map.class, Session.class, Map.class);
-
-        assertTrue(Modifier.isAbstract(getOperatorId.getModifiers()));
-        assertTrue(Modifier.isAbstract(getTunables.getModifiers()));
-        assertTrue(Modifier.isAbstract(setParameter.getModifiers()));
-        assertTrue(Modifier.isAbstract(getState.getModifiers()));
-        assertTrue(Modifier.isAbstract(loadState.getModifiers()));
-        assertTrue(Modifier.isAbstract(invoke.getModifiers()));
-
-        ConcreteOperator operator = new ConcreteOperator();
-        UnsupportedOperationException error = assertThrows(UnsupportedOperationException.class, () -> operator
-                .stream(Collections.emptyMap(), new OperatorTestSupport.TrackingSession(), Collections.emptyMap()));
-        assertEquals("stream not implemented", error.getMessage());
+    void tunableSpecIsImmutableRecord() {
+        assertThat(TunableSpec.class.isRecord()).isTrue();
+        assertThat(TunableSpec.class.getDeclaredMethods())
+                .extracting(Method::getName)
+                .doesNotContain("setName", "setKind", "setPath", "setConstraint");
     }
 
-    private static final class ConcreteOperator extends Operator {
+    @Test
+    void operatorClassIsAbstract() {
+        assertThat(Modifier.isAbstract(Operator.class.getModifiers())).isTrue();
+    }
+
+    @Test
+    void previewableOperatorClassIsAbstract() {
+        assertThat(Modifier.isAbstract(PreviewableOperator.class.getModifiers())).isTrue();
+    }
+
+    @Test
+    void operatorAbstractMethodsStayAbstract() throws NoSuchMethodException {
+        assertThat(Modifier.isAbstract(Operator.class.getDeclaredMethod("getOperatorId").getModifiers())).isTrue();
+        assertThat(Modifier.isAbstract(Operator.class.getDeclaredMethod("getTunables").getModifiers())).isTrue();
+        assertThat(Modifier.isAbstract(Operator.class.getDeclaredMethod("getState").getModifiers())).isTrue();
+        assertThat(Modifier.isAbstract(Operator.class.getDeclaredMethod("setParameter", String.class, Object.class).getModifiers()))
+                .isTrue();
+        assertThat(Modifier.isAbstract(Operator.class.getDeclaredMethod("loadState", Map.class).getModifiers())).isTrue();
+    }
+
+    @Test
+    void fakeOperatorExposesPromptTunableSpec() {
+        FakeOperator operator = new FakeOperator("old");
+
+        assertThat(operator.getTunables())
+                .containsEntry("system_prompt", new TunableSpec("system_prompt", "prompt", "prompt"));
+    }
+
+    @Test
+    void applyUpdateDelegatesReplaceStateToSetParameter() {
+        FakeOperator operator = new FakeOperator("old");
+
+        ApplyResult result = operator.applyUpdate(
+                "system_prompt",
+                UpdateValue.builder()
+                        .payload("new")
+                        .metadata(Map.of("source", "test"))
+                        .build()
+        );
+
+        assertThat(operator.getStoredValue()).isEqualTo("new");
+        assertThat(result.isApplied()).isTrue();
+        assertThat(result.getOperatorId()).isEqualTo("fake/operator");
+        assertThat(result.getTarget()).isEqualTo("system_prompt");
+        assertThat(result.getValue()).isEqualTo("new");
+        assertThat(result.getMode()).isEqualTo(Protocols.REPLACE_MODE);
+        assertThat(result.getEffect()).isEqualTo(Protocols.STATE_EFFECT);
+        assertThat(result.getMetadata()).containsEntry("source", "test");
+    }
+
+    @Test
+    void applyUpdateReportsNoopWhenStateDoesNotChange() {
+        FakeOperator operator = new FakeOperator("old");
+
+        ApplyResult result = operator.applyUpdate("unknown_target", new UpdateValue("new"));
+
+        assertThat(operator.getStoredValue()).isEqualTo("old");
+        assertThat(result.isApplied()).isFalse();
+    }
+
+    @Test
+    void applyUpdateRejectsUnsupportedModeOrEffect() {
+        FakeOperator operator = new FakeOperator("old");
+
+        ApplyResult result = operator.applyUpdate(
+                "system_prompt",
+                UpdateValue.builder()
+                        .payload("append-me")
+                        .mode(Protocols.APPEND_MODE)
+                        .effect(Protocols.PENDING_CHANGE_EFFECT)
+                        .build()
+        );
+
+        assertThat(operator.getStoredValue()).isEqualTo("old");
+        assertThat(result.isApplied()).isFalse();
+        assertThat(result.getErrors()).containsExactly(
+                "unsupported update mode/effect for compatibility operator: append/pending_change"
+        );
+    }
+
+    @Test
+    void operatorDoesNotExposeInvokeOrStreamExecutionMethods() {
+        assertThat(Operator.class.getDeclaredMethods())
+                .extracting(Method::getName)
+                .doesNotContain("invoke", "stream");
+    }
+
+    @Test
+    void previewableOperatorRoutesApplyUpdateToPreviewUpdate() {
+        FakePreviewableOperator operator = new FakePreviewableOperator();
+        UpdateValue update = UpdateValue.builder()
+                .payload(Map.of("delta", 1))
+                .mode(Protocols.MERGE_MODE)
+                .effect(Protocols.PENDING_CHANGE_EFFECT)
+                .build();
+
+        ApplyResult result = operator.applyUpdate("experience", update);
+
+        assertThat(operator.previewInvoked()).isTrue();
+        assertThat(result.getEffect()).isEqualTo(Protocols.PENDING_CHANGE_EFFECT);
+        assertThat(result.getValue()).isEqualTo(update.getPayload());
+    }
+
+    private static final class FakeOperator extends Operator {
+        private String storedValue;
+
+        private FakeOperator(String storedValue) {
+            this.storedValue = storedValue;
+        }
+
         @Override
         public String getOperatorId() {
-            return "test_operator";
+            return "fake/operator";
         }
 
         @Override
         public Map<String, TunableSpec> getTunables() {
-            return Collections.emptyMap();
+            return Map.of("system_prompt", new TunableSpec("system_prompt", "prompt", "prompt"));
+        }
+
+        @Override
+        public Map<String, Object> getState() {
+            return Map.of("system_prompt", storedValue);
+        }
+
+        @Override
+        public void setParameter(String target, Object value) {
+            if ("system_prompt".equals(target)) {
+                this.storedValue = String.valueOf(value);
+            }
+        }
+
+        @Override
+        public void loadState(Map<String, Object> state) {
+            this.storedValue = String.valueOf(state.get("system_prompt"));
+        }
+
+        private String getStoredValue() {
+            return storedValue;
+        }
+    }
+
+    private static final class FakePreviewableOperator extends PreviewableOperator {
+        private boolean previewInvoked;
+
+        @Override
+        public String getOperatorId() {
+            return "preview/operator";
+        }
+
+        @Override
+        public Map<String, TunableSpec> getTunables() {
+            return Map.of();
+        }
+
+        @Override
+        public Map<String, Object> getState() {
+            return new LinkedHashMap<>();
         }
 
         @Override
@@ -87,17 +220,24 @@ class OperatorBaseTest {
         }
 
         @Override
-        public Map<String, Object> getState() {
-            return Collections.emptyMap();
-        }
-
-        @Override
         public void loadState(Map<String, Object> state) {
         }
 
         @Override
-        public Object invoke(Map<String, Object> inputs, Session session, Map<String, Object> kwargs) {
-            return "result";
+        public ApplyResult previewUpdate(String target, UpdateValue update) {
+            previewInvoked = true;
+            return ApplyResult.builder()
+                    .operatorId(getOperatorId())
+                    .target(target)
+                    .applied(true)
+                    .mode(update.getMode())
+                    .effect(update.getEffect())
+                    .value(update.getPayload())
+                    .build();
+        }
+
+        private boolean previewInvoked() {
+            return previewInvoked;
         }
     }
 }
