@@ -1,5 +1,18 @@
+/*
+ * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
+ */
 
 package com.openjiuwen.extensions.store.kv;
+
+import com.openjiuwen.core.foundation.store.BasedKVStorePipeline;
+import org.junit.jupiter.api.Test;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicInteger;
 
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -8,83 +21,77 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import com.openjiuwen.spi.store.KVStorePipeline;
-
-import org.junit.jupiter.api.Test;
-
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
-
+/**
+ * Mirrors Python's {@code RedisStore} behavior in
+ * {@code openjiuwen/extensions/store/kv/redis_store.py}.
+ */
 class RedisStoreTest {
+
     @Test
     void basicCrudAndPrefixOperationsWork() {
         RedisStore store = new RedisStore(new FakeRedisClient());
 
         byte[] bytes = new byte[]{1, 2, 3};
-        store.set("user:1", "alice");
-        store.set("user:2", bytes);
-        store.set("other:1", "ignored");
+        store.set("user:1", "alice").join();
+        store.set("user:2", bytes).join();
+        store.set("other:1", "ignored").join();
 
-        assertEquals("alice", store.get("user:1"));
-        assertArrayEquals(bytes, (byte[]) store.get("user:2"));
-        assertTrue(store.exists("user:1"));
+        assertEquals("alice", store.get("user:1").join());
+        assertArrayEquals(bytes, (byte[]) store.get("user:2").join());
+        assertTrue(store.exists("user:1").join());
 
-        Map<String, Object> byPrefix = store.getByPrefix("user:");
+        Map<String, Object> byPrefix = store.getByPrefix("user:").join();
         assertEquals(2, byPrefix.size());
         assertEquals("alice", byPrefix.get("user:1"));
         assertArrayEquals(bytes, (byte[]) byPrefix.get("user:2"));
 
-        store.deleteByPrefix("user:", 1);
-        assertFalse(store.exists("user:1"));
-        assertFalse(store.exists("user:2"));
-        assertTrue(store.exists("other:1"));
+        store.deleteByPrefix("user:", 1).join();
+        assertFalse(store.exists("user:1").join());
+        assertFalse(store.exists("user:2").join());
+        assertTrue(store.exists("other:1").join());
     }
 
     @Test
     void exclusiveSetMgetAndBatchDeleteFollowRedisSemantics() throws InterruptedException {
         RedisStore store = new RedisStore(new FakeRedisClient());
 
-        assertTrue(store.exclusiveSet("lock", "first", 1));
-        assertFalse(store.exclusiveSet("lock", "second", 1));
+        assertTrue(store.exclusiveSet("lock", "first", 1).join());
+        assertFalse(store.exclusiveSet("lock", "second", 1).join());
 
-        Thread.sleep(1200L);
+        Thread.sleep(1050L);
 
-        assertTrue(store.exclusiveSet("lock", "second", 1));
-        store.set("k1", "v1");
-        store.set("k2", "v2");
+        assertTrue(store.exclusiveSet("lock", "second", 1).join());
+        store.set("k1", "v1").join();
+        store.set("k2", "v2").join();
 
-        assertEquals(Arrays.asList("v1", null, "second"), store.mget(List.of("k1", "missing", "lock")));
-        assertEquals(2, store.batchDelete(List.of("k1", "missing", "k2"), 1));
-        assertNull(store.get("k1"));
-        assertNull(store.get("k2"));
+        assertEquals(Arrays.asList("v1", null, "second"), store.mget(List.of("k1", "missing", "lock")).join());
+        assertEquals(2, store.batchDelete(List.of("k1", "missing", "k2"), 1).join());
+        assertNull(store.get("k1").join());
+        assertNull(store.get("k2").join());
     }
 
     @Test
     void pipelineAndRefreshTtlUseTheStoreContract() throws InterruptedException {
         RedisStore store = new RedisStore(new FakeRedisClient());
 
-        KVStorePipeline pipeline = store.pipeline();
-        pipeline.set("pipe:ttl", "value", 1);
-        pipeline.set("pipe:stable", "stable");
-        pipeline.get("pipe:ttl");
-        pipeline.exists("pipe:stable");
+        BasedKVStorePipeline pipeline = store.pipeline();
+        pipeline.set("pipe:ttl", "value", 1).join();
+        pipeline.set("pipe:stable", "stable", null).join();
+        pipeline.get("pipe:ttl").join();
+        pipeline.exists("pipe:stable").join();
 
-        List<Object> results = pipeline.execute();
+        List<Object> results = pipeline.execute().join();
         assertEquals(4, results.size());
         assertEquals("value", results.get(2));
         assertEquals(Boolean.TRUE, results.get(3));
 
-        Thread.sleep(600L);
+        Thread.sleep(480L);
         store.refreshTtl(List.of("pipe:ttl"), 2);
-        Thread.sleep(700L);
-        assertTrue(store.exists("pipe:ttl"));
+        Thread.sleep(600L);
+        assertTrue(store.exists("pipe:ttl").join());
 
         Thread.sleep(1600L);
-        assertFalse(store.exists("pipe:ttl"));
+        assertFalse(store.exists("pipe:ttl").join());
     }
 
     @Test
@@ -93,18 +100,28 @@ class RedisStoreTest {
         assertFalse(new RedisStore(new FakeRedisClient()).isCluster());
 
         RedisStore failingStore = new RedisStore(new ExplodingRedisClient());
-        failingStore.set("volatile", "value");
+        failingStore.set("volatile", "value").join();
         assertDoesNotThrow(() -> failingStore.refreshTtl(List.of("volatile"), 5));
     }
 
     @Test
-    void getPreservesBinaryValuesLikeJedisByteApi() {
-        RedisStore store = new RedisStore(new JedisLikeBinaryClient());
-        byte[] serialized = new byte[]{(byte) 0xAC, (byte) 0xED, 0, 5, 0x7B};
+    void closeDoesNotReleaseExternalRedisClientByDefault() {
+        CloseableRedisClient redisClient = new CloseableRedisClient();
+        RedisStore store = new RedisStore(redisClient);
 
-        store.set("blob-key", serialized);
+        store.close();
 
-        assertArrayEquals(serialized, (byte[]) store.get("blob-key"));
+        assertEquals(0, redisClient.closeCount());
+    }
+
+    @Test
+    void closeReleasesOwnedRedisClient() {
+        CloseableRedisClient redisClient = new CloseableRedisClient();
+        RedisStore store = new RedisStore(redisClient, true);
+
+        store.close();
+
+        assertEquals(1, redisClient.closeCount());
     }
 
     static class FakeRedisClient {
@@ -115,10 +132,6 @@ class RedisStoreTest {
             cleanup(key);
             values.put(key, value);
             expiryAt.remove(key);
-        }
-
-        public void set(byte[] key, byte[] value) {
-            set(new String(key, StandardCharsets.UTF_8), value);
         }
 
         public boolean set(String key, Object value, boolean nx, Integer expiry) {
@@ -138,11 +151,6 @@ class RedisStoreTest {
         public Object get(String key) {
             cleanup(key);
             return values.get(key);
-        }
-
-        public byte[] get(byte[] key) {
-            Object value = get(new String(key, StandardCharsets.UTF_8));
-            return value instanceof byte[] bytes ? bytes : null;
         }
 
         public long exists(String key) {
@@ -208,6 +216,19 @@ class RedisStoreTest {
     static final class FakeRedisClusterClient extends FakeRedisClient {
     }
 
+    static final class CloseableRedisClient extends FakeRedisClient implements AutoCloseable {
+        private final AtomicInteger closeCount = new AtomicInteger();
+
+        @Override
+        public void close() {
+            closeCount.incrementAndGet();
+        }
+
+        int closeCount() {
+            return closeCount.get();
+        }
+    }
+
     static class ExplodingRedisClient extends FakeRedisClient {
         @Override
         public FakeRedisPipeline pipeline() {
@@ -243,31 +264,6 @@ class RedisStoreTest {
         @Override
         public FakeRedisPipeline expire(String key, int ttlSeconds) {
             throw new IllegalStateException("boom");
-        }
-    }
-
-    /**
-     * Mimics Jedis: binary values are stored via {@code set(byte[], byte[])} and only
-     * {@code get(byte[])} returns raw bytes; {@code get(String)} would UTF-8-decode.
-     */
-    static class JedisLikeBinaryClient {
-        private final Map<String, byte[]> values = new ConcurrentHashMap<>();
-
-        public String set(byte[] key, byte[] value) {
-            values.put(new String(key, java.nio.charset.StandardCharsets.UTF_8), value);
-            return "OK";
-        }
-
-        public byte[] get(byte[] key) {
-            return values.get(new String(key, java.nio.charset.StandardCharsets.UTF_8));
-        }
-
-        public String get(String key) {
-            byte[] value = values.get(key);
-            if (value == null) {
-                return null;
-            }
-            return new String(value, java.nio.charset.StandardCharsets.UTF_8);
         }
     }
 }
